// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selection should contain Actions 1`] = `
<styled.div
  data-test="actions"
>
  <StyledComponent
    data-test="actions"
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-brqgnP",
          "isStatic": true,
          "lastClassName": "QAZzj",
          "rules": Array [
            "
  display: flex;
  align-items: center;
  margin-left: auto;
  margin-right: 24px;
",
          ],
        },
        "displayName": "styled.div",
        "render": [Function],
        "styledComponentId": "sc-brqgnP",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="sc-brqgnP QAZzj"
      data-test="actions"
    >
      <styled.div
        onClick={[Function]}
      >
        <StyledComponent
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "sc-cMljjf",
                "isStatic": true,
                "lastClassName": "giKUJt",
                "rules": Array [
                  "
  display: flex;
  align-items: center;
  position: relative;
  top: 1px;
  height: 26px;
  z-index: 1;
  padding: 0 2px;
  margin-right: 10px;
  border-right: 1px solid ",
                  "rgba(255, 255, 255, 0.15)",
                  ";
",
                ],
              },
              "displayName": "styled.div",
              "render": [Function],
              "styledComponentId": "sc-cMljjf",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="sc-cMljjf giKUJt"
            onClick={[Function]}
          >
            <Dropdown
              aria-label="Batch Operations"
              buttonStyles={
                Array [
                  "
  color: #fff;
",
                ]
              }
              label={<ForwardRef />}
              placement="bottom"
            >
              <styled.div>
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": undefined,
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-fjdhpX",
                        "isStatic": true,
                        "lastClassName": "Yobvn",
                        "rules": Array [
                          "
  position: relative;
  height: 20px;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "render": [Function],
                      "styledComponentId": "sc-fjdhpX",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={[Function]}
                >
                  <div
                    className="sc-fjdhpX Yobvn"
                  >
                    <Themed(styled.button)
                      buttonStyles={
                        Array [
                          "
  color: #fff;
",
                        ]
                      }
                      data-button-open={false}
                      data-test="dropdown-toggle"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                    >
                      <Themed
                        buttonStyles={
                          Array [
                            "
  color: #fff;
",
                          ]
                        }
                        data-button-open={false}
                        data-test="dropdown-toggle"
                        forwardedRef={null}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        <styled.button
                          buttonStyles={
                            Array [
                              "
  color: #fff;
",
                            ]
                          }
                          data-button-open={false}
                          data-test="dropdown-toggle"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          theme="dark"
                        >
                          <StyledComponent
                            buttonStyles={
                              Array [
                                "
  color: #fff;
",
                              ]
                            }
                            data-button-open={false}
                            data-test="dropdown-toggle"
                            forwardedClass={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": undefined,
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-jzJRlG",
                                  "isStatic": false,
                                  "lastClassName": "fBbEHG",
                                  "rules": Array [
                                    "
  /* Positioning */
  position: relative;
  display: flex;
  align-items: center;

  /* Display & Box Model */
  border: none;

  /* Color */
  color: ",
                                    [Function],
                                    ";

  background: none;

  /* Text */
  font-family: IBMPlexSans;
  font-size: 15px;
  font-weight: 600;

  /* Other */
  cursor: ",
                                    [Function],
                                    ";

  & > svg {
    vertical-align: text-bottom;
  }

  ",
                                    [Function],
                                    ";
",
                                  ],
                                },
                                "displayName": "styled.button",
                                "render": [Function],
                                "styledComponentId": "sc-jzJRlG",
                                "target": "button",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            theme="dark"
                          >
                            <button
                              className="sc-jzJRlG fBbEHG"
                              data-button-open={false}
                              data-test="dropdown-toggle"
                              onClick={[Function]}
                              onKeyDown={[Function]}
                            >
                              <Styled(ReactComponent)>
                                <StyledComponent
                                  forwardedClass={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": undefined,
                                      "componentStyle": ComponentStyle {
                                        "componentId": "sc-csuQGl",
                                        "isStatic": true,
                                        "lastClassName": "hPdAxl",
                                        "rules": Array [
                                          "
  color: '#ffffff';
",
                                        ],
                                      },
                                      "displayName": "Styled(ReactComponent)",
                                      "render": [Function],
                                      "styledComponentId": "sc-csuQGl",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                      Symbol(Symbol.hasInstance): [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                >
                                  <ReactComponent
                                    className="sc-csuQGl hPdAxl"
                                  >
                                    <svg
                                      className="sc-csuQGl hPdAxl"
                                    >
                                      batch.svg
                                    </svg>
                                  </ReactComponent>
                                </StyledComponent>
                              </Styled(ReactComponent)>
                              <ReactComponent>
                                <svg>
                                  down.svg
                                </svg>
                              </ReactComponent>
                            </button>
                          </StyledComponent>
                        </styled.button>
                      </Themed>
                    </Themed(styled.button)>
                    <CSSTransition
                      classNames="transition"
                      in={false}
                      mountOnEnter={true}
                      timeout={
                        Object {
                          "enter": 50,
                          "exit": 20,
                        }
                      }
                      unmountOnExit={true}
                    >
                      <Transition
                        appear={false}
                        enter={true}
                        exit={true}
                        in={false}
                        mountOnEnter={true}
                        onEnter={[Function]}
                        onEntered={[Function]}
                        onEntering={[Function]}
                        onExit={[Function]}
                        onExited={[Function]}
                        onExiting={[Function]}
                        timeout={
                          Object {
                            "enter": 50,
                            "exit": 20,
                          }
                        }
                        unmountOnExit={true}
                      />
                    </CSSTransition>
                  </div>
                </StyledComponent>
              </styled.div>
            </Dropdown>
          </div>
        </StyledComponent>
      </styled.div>
      <styled.button
        aria-label="Drop Selection 1"
        onClick={[MockFunction]}
      >
        <StyledComponent
          aria-label="Drop Selection 1"
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "sc-jAaTju",
                "isStatic": true,
                "lastClassName": "bxgtuH",
                "rules": Array [
                  "
  background: transparent;
  border-radius: 12px;
  width: 16px;
  height: 16px;
  padding: 0px;
  z-index: 3;
",
                ],
              },
              "displayName": "styled.button",
              "render": [Function],
              "styledComponentId": "sc-jAaTju",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[MockFunction]}
        >
          <button
            aria-label="Drop Selection 1"
            className="sc-jAaTju bxgtuH"
            onClick={[MockFunction]}
          >
            <Styled(ReactComponent)>
              <StyledComponent
                forwardedClass={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": undefined,
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-jDwBTQ",
                      "isStatic": true,
                      "lastClassName": "hbZRma",
                      "rules": Array [
                        "
  opacity: 0.45;
  cursor: pointer;
",
                      ],
                    },
                    "displayName": "Styled(ReactComponent)",
                    "render": [Function],
                    "styledComponentId": "sc-jDwBTQ",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                    Symbol(Symbol.hasInstance): [Function],
                  }
                }
                forwardedRef={null}
              >
                <ReactComponent
                  className="sc-jDwBTQ hbZRma"
                >
                  <svg
                    className="sc-jDwBTQ hbZRma"
                  >
                    remove-item.svg
                  </svg>
                </ReactComponent>
              </StyledComponent>
            </Styled(ReactComponent)>
          </button>
        </StyledComponent>
      </styled.button>
    </div>
  </StyledComponent>
</styled.div>
`;

exports[`Selection should contain Instances 1`] = `
<ul
  className="sc-hMqMXs icPpYa"
>
  <TransitionGroup
    childFactory={[Function]}
    component={null}
  >
    <Themed(Styled(Transition))
      data-test="addInstanceTransition"
      in={true}
      key=".$0"
      onExited={[Function]}
      timeout={800}
    >
      <Themed
        data-test="addInstanceTransition"
        forwardedRef={null}
        in={true}
        onExited={[Function]}
        timeout={800}
      >
        <Styled(Transition)
          data-test="addInstanceTransition"
          in={true}
          onExited={[Function]}
          theme="dark"
          timeout={800}
        >
          <StyledComponent
            data-test="addInstanceTransition"
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "sc-kkGfuU",
                  "isStatic": false,
                  "lastClassName": "gIWufZ",
                  "rules": Array [
                    "
  &.transition-enter {
    opacity: 0;
  }
  &.transition-enter-active {
    opacity: 1;
    transition: opacity ",
                    [Function],
                    ";
  }
  &.transition-enter-done {
    opacity: 1;
  }
",
                  ],
                },
                "displayName": "Styled(Transition)",
                "render": [Function],
                "styledComponentId": "sc-kkGfuU",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            in={true}
            onExited={[Function]}
            theme="dark"
            timeout={800}
          >
            <Transition
              className="sc-kkGfuU gIWufZ"
              data-test="addInstanceTransition"
              in={true}
              onExited={[Function]}
              theme="dark"
              timeout={800}
            >
              <CSSTransition
                className="sc-kkGfuU gIWufZ"
                classNames="transition"
                data-test="addInstanceTransition"
                in={true}
                onExited={[Function]}
                theme="dark"
                timeout={800}
              >
                <Transition
                  appear={false}
                  className="sc-kkGfuU gIWufZ"
                  data-test="addInstanceTransition"
                  enter={true}
                  exit={true}
                  in={true}
                  mountOnEnter={false}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  theme="dark"
                  timeout={800}
                  unmountOnExit={false}
                >
                  <Themed(styled.li)
                    className="sc-kkGfuU gIWufZ"
                    data-test="addInstanceTransition"
                    theme="dark"
                  >
                    <Themed
                      className="sc-kkGfuU gIWufZ"
                      data-test="addInstanceTransition"
                      forwardedRef={null}
                      theme="dark"
                    >
                      <styled.li
                        className="sc-kkGfuU gIWufZ"
                        data-test="addInstanceTransition"
                        theme="dark"
                      >
                        <StyledComponent
                          className="sc-kkGfuU gIWufZ"
                          data-test="addInstanceTransition"
                          forwardedClass={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": undefined,
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-bRBYWo",
                                "isStatic": false,
                                "lastClassName": "dPDhoN",
                                "rules": Array [
                                  "
  display: flex;
  align-items: center;
  height: 31px;

  color: ",
                                  [Function],
                                  ";
  font-size: 13px;
  & * {
    top: 1px;
  }

  & > div {
    padding-left: 10px;
  }

  &:nth-child(even) {
    background: ",
                                  [Function],
                                  ";

    border-bottom: 1px solid ",
                                  [Function],
                                  ";
  }

  &:nth-child(odd) {
    background: ",
                                  [Function],
                                  ";
    border-bottom: 1px solid ",
                                  [Function],
                                  ";
  }
",
                                ],
                              },
                              "displayName": "styled.li",
                              "render": [Function],
                              "styledComponentId": "sc-bRBYWo",
                              "target": "li",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          theme="dark"
                        >
                          <li
                            className="sc-kkGfuU gIWufZ sc-bRBYWo dPDhoN"
                            data-test="addInstanceTransition"
                          >
                            <styled.div>
                              <StyledComponent
                                forwardedClass={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": undefined,
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-hzDkRC",
                                      "isStatic": true,
                                      "lastClassName": "biPwtE",
                                      "rules": Array [
                                        "
  width: 25px;
",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "render": [Function],
                                    "styledComponentId": "sc-hzDkRC",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <div
                                  className="sc-hzDkRC biPwtE"
                                >
                                  <Themed(StateIcon)
                                    state="ACTIVE"
                                  >
                                    <Themed
                                      forwardedRef={null}
                                      state="ACTIVE"
                                    >
                                      <StateIcon
                                        state="ACTIVE"
                                        theme="dark"
                                      >
                                        <Styled(ReactComponent)
                                          theme="dark"
                                        >
                                          <StyledComponent
                                            forwardedClass={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": undefined,
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-bwzfXH",
                                                  "isStatic": true,
                                                  "lastClassName": "cjPJyG",
                                                  "rules": Array [
                                                    "
  ",
                                                    "
  position: relative;
  top: 3px;
  margin-right: 5px;
",
                                                    ";
  color: ",
                                                    "#10d070",
                                                    ";
",
                                                  ],
                                                },
                                                "displayName": "Styled(ReactComponent)",
                                                "render": [Function],
                                                "styledComponentId": "sc-bwzfXH",
                                                "target": [Function],
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                                Symbol(Symbol.hasInstance): [Function],
                                              }
                                            }
                                            forwardedRef={null}
                                            theme="dark"
                                          >
                                            <ReactComponent
                                              className="sc-bwzfXH cjPJyG"
                                              theme="dark"
                                            >
                                              <svg
                                                className="sc-bwzfXH cjPJyG"
                                                theme="dark"
                                              >
                                                state-ok.svg
                                              </svg>
                                            </ReactComponent>
                                          </StyledComponent>
                                        </Styled(ReactComponent)>
                                      </StateIcon>
                                    </Themed>
                                  </Themed(StateIcon)>
                                </div>
                              </StyledComponent>
                            </styled.div>
                            <styled.div>
                              <StyledComponent
                                forwardedClass={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": undefined,
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-jhAzac",
                                      "isStatic": true,
                                      "lastClassName": "iStnqc",
                                      "rules": Array [
                                        "
  width: 50%;
",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "render": [Function],
                                    "styledComponentId": "sc-jhAzac",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <div
                                  className="sc-jhAzac iStnqc"
                                >
                                  someWorkflowName
                                </div>
                              </StyledComponent>
                            </styled.div>
                            <styled.div>
                              <StyledComponent
                                forwardedClass={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": undefined,
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-fBuWsC",
                                      "isStatic": true,
                                      "lastClassName": "ekZSGz",
                                      "rules": Array [
                                        "
  width: 50%;
",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "render": [Function],
                                    "styledComponentId": "sc-fBuWsC",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <div
                                  className="sc-fBuWsC ekZSGz"
                                >
                                  id_1
                                </div>
                              </StyledComponent>
                            </styled.div>
                            <styled.div>
                              <StyledComponent
                                forwardedClass={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": undefined,
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-fMiknA",
                                      "isStatic": true,
                                      "lastClassName": "dHwbnD",
                                      "rules": Array [
                                        "
  width: 185px;
",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "render": [Function],
                                    "styledComponentId": "sc-fMiknA",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <div
                                  className="sc-fMiknA dHwbnD"
                                >
                                  <Styled(ActionStatus)
                                    instance={
                                      Object {
                                        "activities": Array [
                                          Object {
                                            "activityId": "activityId_0",
                                            "endDate": "2018-10-10T09:20:38.658Z",
                                            "id": "id_0",
                                            "startDate": "2018-10-10T09:20:38.658Z",
                                            "state": "ACTIVE",
                                          },
                                        ],
                                        "bpmnProcessId": "someKey",
                                        "endDate": null,
                                        "id": "id_1",
                                        "operations": Array [
                                          Object {
                                            "endDate": "2018-10-10T09:20:38.661Z",
                                            "errorMessage": "string",
                                            "startDate": "2018-10-10T09:20:38.661Z",
                                            "state": "SENT",
                                            "type": "RESOLVE_INCIDENT",
                                          },
                                        ],
                                        "sequenceFlows": Array [],
                                        "startDate": "2018-06-21",
                                        "state": "ACTIVE",
                                        "workflowId": "2",
                                        "workflowName": "someWorkflowName",
                                        "workflowVersion": 1,
                                      }
                                    }
                                    operationState="SENT"
                                    operationType="RESOLVE_INCIDENT"
                                  >
                                    <StyledComponent
                                      forwardedClass={
                                        Object {
                                          "$$typeof": Symbol(react.forward_ref),
                                          "Spinner": Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "WrappedComponent": Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "attrs": undefined,
                                              "componentStyle": ComponentStyle {
                                                "componentId": "sc-dxgOiQ",
                                                "isStatic": false,
                                                "lastClassName": "fnVsKo",
                                                "rules": Array [
                                                  "
  margin: 0 5px;
 border: 3px solid ",
                                                  [Function],
                                                  ";
    border-right-color: transparent;
  }
",
                                                ],
                                              },
                                              "displayName": "Styled(Spinner)",
                                              "render": [Function],
                                              "styledComponentId": "sc-dxgOiQ",
                                              "target": [Function],
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                              Symbol(Symbol.hasInstance): [Function],
                                            },
                                            "displayName": "Themed(Styled(Spinner))",
                                            "render": [Function],
                                          },
                                          "attrs": undefined,
                                          "componentStyle": ComponentStyle {
                                            "componentId": "sc-dVhcbM",
                                            "isStatic": true,
                                            "lastClassName": "OOsdt",
                                            "rules": Array [
                                              "
  margin-right: 97px;
",
                                            ],
                                          },
                                          "displayName": "Styled(ActionStatus)",
                                          "render": [Function],
                                          "styledComponentId": "sc-dVhcbM",
                                          "target": [Function],
                                          "toString": [Function],
                                          "warnTooManyClasses": [Function],
                                          "withComponent": [Function],
                                          Symbol(Symbol.hasInstance): [Function],
                                        }
                                      }
                                      forwardedRef={null}
                                      instance={
                                        Object {
                                          "activities": Array [
                                            Object {
                                              "activityId": "activityId_0",
                                              "endDate": "2018-10-10T09:20:38.658Z",
                                              "id": "id_0",
                                              "startDate": "2018-10-10T09:20:38.658Z",
                                              "state": "ACTIVE",
                                            },
                                          ],
                                          "bpmnProcessId": "someKey",
                                          "endDate": null,
                                          "id": "id_1",
                                          "operations": Array [
                                            Object {
                                              "endDate": "2018-10-10T09:20:38.661Z",
                                              "errorMessage": "string",
                                              "startDate": "2018-10-10T09:20:38.661Z",
                                              "state": "SENT",
                                              "type": "RESOLVE_INCIDENT",
                                            },
                                          ],
                                          "sequenceFlows": Array [],
                                          "startDate": "2018-06-21",
                                          "state": "ACTIVE",
                                          "workflowId": "2",
                                          "workflowName": "someWorkflowName",
                                          "workflowVersion": 1,
                                        }
                                      }
                                      operationState="SENT"
                                      operationType="RESOLVE_INCIDENT"
                                    >
                                      <ActionStatus
                                        className="sc-dVhcbM OOsdt"
                                        instance={
                                          Object {
                                            "activities": Array [
                                              Object {
                                                "activityId": "activityId_0",
                                                "endDate": "2018-10-10T09:20:38.658Z",
                                                "id": "id_0",
                                                "startDate": "2018-10-10T09:20:38.658Z",
                                                "state": "ACTIVE",
                                              },
                                            ],
                                            "bpmnProcessId": "someKey",
                                            "endDate": null,
                                            "id": "id_1",
                                            "operations": Array [
                                              Object {
                                                "endDate": "2018-10-10T09:20:38.661Z",
                                                "errorMessage": "string",
                                                "startDate": "2018-10-10T09:20:38.661Z",
                                                "state": "SENT",
                                                "type": "RESOLVE_INCIDENT",
                                              },
                                            ],
                                            "sequenceFlows": Array [],
                                            "startDate": "2018-06-21",
                                            "state": "ACTIVE",
                                            "workflowId": "2",
                                            "workflowName": "someWorkflowName",
                                            "workflowVersion": 1,
                                          }
                                        }
                                        operationState="SENT"
                                        operationType="RESOLVE_INCIDENT"
                                      >
                                        <Themed(Styled(Spinner))
                                          className="sc-dVhcbM OOsdt"
                                          title="Instance id_1 has scheduled Operations"
                                        >
                                          <Themed
                                            className="sc-dVhcbM OOsdt"
                                            forwardedRef={null}
                                            title="Instance id_1 has scheduled Operations"
                                          >
                                            <Styled(Spinner)
                                              className="sc-dVhcbM OOsdt"
                                              theme="dark"
                                              title="Instance id_1 has scheduled Operations"
                                            >
                                              <StyledComponent
                                                className="sc-dVhcbM OOsdt"
                                                forwardedClass={
                                                  Object {
                                                    "$$typeof": Symbol(react.forward_ref),
                                                    "attrs": undefined,
                                                    "componentStyle": ComponentStyle {
                                                      "componentId": "sc-dxgOiQ",
                                                      "isStatic": false,
                                                      "lastClassName": "fnVsKo",
                                                      "rules": Array [
                                                        "
  margin: 0 5px;
 border: 3px solid ",
                                                        [Function],
                                                        ";
    border-right-color: transparent;
  }
",
                                                      ],
                                                    },
                                                    "displayName": "Styled(Spinner)",
                                                    "render": [Function],
                                                    "styledComponentId": "sc-dxgOiQ",
                                                    "target": [Function],
                                                    "toString": [Function],
                                                    "warnTooManyClasses": [Function],
                                                    "withComponent": [Function],
                                                    Symbol(Symbol.hasInstance): [Function],
                                                  }
                                                }
                                                forwardedRef={null}
                                                theme="dark"
                                                title="Instance id_1 has scheduled Operations"
                                              >
                                                <Spinner
                                                  className="sc-dVhcbM OOsdt sc-dxgOiQ fnVsKo"
                                                  theme="dark"
                                                  title="Instance id_1 has scheduled Operations"
                                                >
                                                  <Themed(styled.div)
                                                    className="sc-dVhcbM OOsdt sc-dxgOiQ fnVsKo"
                                                    theme="dark"
                                                    title="Instance id_1 has scheduled Operations"
                                                  >
                                                    <Themed
                                                      className="sc-dVhcbM OOsdt sc-dxgOiQ fnVsKo"
                                                      forwardedRef={null}
                                                      theme="dark"
                                                      title="Instance id_1 has scheduled Operations"
                                                    >
                                                      <styled.div
                                                        className="sc-dVhcbM OOsdt sc-dxgOiQ fnVsKo"
                                                        theme="dark"
                                                        title="Instance id_1 has scheduled Operations"
                                                      >
                                                        <StyledComponent
                                                          className="sc-dVhcbM OOsdt sc-dxgOiQ fnVsKo"
                                                          forwardedClass={
                                                            Object {
                                                              "$$typeof": Symbol(react.forward_ref),
                                                              "attrs": undefined,
                                                              "componentStyle": ComponentStyle {
                                                                "componentId": "sc-kpOJdX",
                                                                "isStatic": false,
                                                                "lastClassName": "uWbJd",
                                                                "rules": Array [
                                                                  "
  border-radius: 50%;

  // intentionally sized based on the parent's font-size
  width: 1em;
  height: 1em;

  position: relative;

  border: 3px solid
    ",
                                                                  [Function],
                                                                  ";
  border-right-color: transparent;

  animation: ",
                                                                  Keyframes {
                                                                    "id": "sc-keyframes-iECmZH",
                                                                    "inject": [Function],
                                                                    "name": "iECmZH",
                                                                    "rules": Array [
                                                                      "@-webkit-keyframes iECmZH{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                                                                      "@keyframes iECmZH{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                                                                    ],
                                                                    "toString": [Function],
                                                                  },
                                                                  " 0.65s infinite linear;
",
                                                                ],
                                                              },
                                                              "displayName": "styled.div",
                                                              "render": [Function],
                                                              "styledComponentId": "sc-kpOJdX",
                                                              "target": "div",
                                                              "toString": [Function],
                                                              "warnTooManyClasses": [Function],
                                                              "withComponent": [Function],
                                                            }
                                                          }
                                                          forwardedRef={null}
                                                          theme="dark"
                                                          title="Instance id_1 has scheduled Operations"
                                                        >
                                                          <div
                                                            className="sc-dVhcbM OOsdt sc-dxgOiQ fnVsKo sc-kpOJdX uWbJd"
                                                            title="Instance id_1 has scheduled Operations"
                                                          />
                                                        </StyledComponent>
                                                      </styled.div>
                                                    </Themed>
                                                  </Themed(styled.div)>
                                                </Spinner>
                                              </StyledComponent>
                                            </Styled(Spinner)>
                                          </Themed>
                                        </Themed(Styled(Spinner))>
                                      </ActionStatus>
                                    </StyledComponent>
                                  </Styled(ActionStatus)>
                                </div>
                              </StyledComponent>
                            </styled.div>
                          </li>
                        </StyledComponent>
                      </styled.li>
                    </Themed>
                  </Themed(styled.li)>
                </Transition>
              </CSSTransition>
            </Transition>
          </StyledComponent>
        </Styled(Transition)>
      </Themed>
    </Themed(Styled(Transition))>
  </TransitionGroup>
</ul>
`;

exports[`Selection should contain a Footer 1`] = `
<styled.footer>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-eqIVtm",
          "isStatic": true,
          "lastClassName": "gKcUMN",
          "rules": Array [
            "
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 32px;
  padding: 8px 21px 7px 0;
  color: #ffffff;
  background: ",
            "#4d90ff",
            ";
  border-radius: 0 0 0 3px;
  border-width: 1px 0 1px 1px;
  border-style: solid;
  border-color: #659fff;
",
          ],
        },
        "displayName": "styled.footer",
        "render": [Function],
        "styledComponentId": "sc-eqIVtm",
        "target": "footer",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <footer
      className="sc-eqIVtm gKcUMN"
    >
      <styled.div>
        <StyledComponent
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "sc-fAjcbJ",
                "isStatic": true,
                "lastClassName": "gPZWbT",
                "rules": Array [
                  "
  font-size: 13px;
",
                ],
              },
              "displayName": "styled.div",
              "render": [Function],
              "styledComponentId": "sc-fAjcbJ",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-fAjcbJ gPZWbT"
          >
            144 more Instances
          </div>
        </StyledComponent>
      </styled.div>
    </footer>
  </StyledComponent>
</styled.footer>
`;

exports[`Selection should contain a Header 1`] = `
<Themed(styled.dt)
  isOpen={true}
>
  <Themed
    forwardedRef={null}
    isOpen={true}
  >
    <styled.dt
      isOpen={true}
      theme="dark"
    >
      <StyledComponent
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": undefined,
            "componentStyle": ComponentStyle {
              "componentId": "sc-hSdWYo",
              "isStatic": false,
              "lastClassName": "jhkrKG",
              "rules": Array [
                "
  height: 32px;
  padding: 0;
  display: flex;
  align-items: center;
  position: relative;

  ",
                [Function],
                "

  background: ",
                [Function],
                ";
  border-style: solid;
  border-width: 1px 0 1px 1px;
  border-color: ",
                [Function],
                ";
  border-radius: 3px 0 0 ",
                [Function],
                ";
",
              ],
            },
            "displayName": "styled.dt",
            "render": [Function],
            "styledComponentId": "sc-hSdWYo",
            "target": "dt",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isOpen={true}
        theme="dark"
      >
        <dt
          className="sc-hSdWYo jhkrKG"
        >
          <Themed(styled.div)
            isOpen={true}
          >
            <Themed
              forwardedRef={null}
              isOpen={true}
            >
              <styled.div
                isOpen={true}
                theme="dark"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": undefined,
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-gPEVay",
                        "isStatic": false,
                        "lastClassName": "cgIATh",
                        "rules": Array [
                          "
  position: relative;
  top: 1px;
  padding-left: 10px;
  cursor: pointer;

  color: ",
                          [Function],
                          ";
",
                        ],
                      },
                      "displayName": "styled.div",
                      "render": [Function],
                      "styledComponentId": "sc-gPEVay",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isOpen={true}
                  theme="dark"
                >
                  <div
                    className="sc-gPEVay cgIATh"
                  >
                    <ReactComponent>
                      <svg>
                        down.svg
                      </svg>
                    </ReactComponent>
                  </div>
                </StyledComponent>
              </styled.div>
            </Themed>
          </Themed(styled.div)>
          <Themed(styled.span)
            role="heading"
          >
            <Themed
              forwardedRef={null}
              role="heading"
            >
              <styled.span
                role="heading"
                theme="dark"
              >
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": undefined,
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-eHgmQL",
                        "isStatic": true,
                        "lastClassName": "cWTiFu",
                        "rules": Array [
                          "
  display: flex;
  align-items: flex-start;
",
                        ],
                      },
                      "displayName": "styled.span",
                      "render": [Function],
                      "styledComponentId": "sc-eHgmQL",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  role="heading"
                  theme="dark"
                >
                  <span
                    className="sc-eHgmQL cWTiFu"
                    role="heading"
                  >
                    <Themed(styled.button)
                      aria-controls="selection-1"
                      aria-expanded={true}
                      aria-label="Selection 1, holding 145 Instances"
                      data-test="selection-toggle"
                      id="selection-1-toggle"
                      isOpen={true}
                      onClick={[Function]}
                    >
                      <Themed
                        aria-controls="selection-1"
                        aria-expanded={true}
                        aria-label="Selection 1, holding 145 Instances"
                        data-test="selection-toggle"
                        forwardedRef={null}
                        id="selection-1-toggle"
                        isOpen={true}
                        onClick={[Function]}
                      >
                        <styled.button
                          aria-controls="selection-1"
                          aria-expanded={true}
                          aria-label="Selection 1, holding 145 Instances"
                          data-test="selection-toggle"
                          id="selection-1-toggle"
                          isOpen={true}
                          onClick={[Function]}
                          theme="dark"
                        >
                          <StyledComponent
                            aria-controls="selection-1"
                            aria-expanded={true}
                            aria-label="Selection 1, holding 145 Instances"
                            data-test="selection-toggle"
                            forwardedClass={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": undefined,
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-cvbbAY",
                                  "isStatic": false,
                                  "lastClassName": "hfuLcB",
                                  "rules": Array [
                                    "
  /* Positioning */
  background: transparent;
  position: absolute;
  width: 100%;
  bottom: -1px;
  left: 0px;

  &:focus {
    z-index: 1;
  }

  /* Color */
  color: ",
                                    [Function],
                                    ";

  /* Display & Box Model */
  display: flex;
  align-items: center;
  border-radius: 3px 0 0 ",
                                    [Function],
                                    ";
  height: 32px;
  padding-left: 9px;
  padding-right: 21px;

  /* Text */
  font-size: 15px;
  font-weight: 600;

  /* Other */
  cursor: ",
                                    [Function],
                                    ";
",
                                  ],
                                },
                                "displayName": "styled.button",
                                "render": [Function],
                                "styledComponentId": "sc-cvbbAY",
                                "target": "button",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            id="selection-1-toggle"
                            isOpen={true}
                            onClick={[Function]}
                            theme="dark"
                          >
                            <button
                              aria-controls="selection-1"
                              aria-expanded={true}
                              aria-label="Selection 1, holding 145 Instances"
                              className="sc-cvbbAY hfuLcB"
                              data-test="selection-toggle"
                              id="selection-1-toggle"
                              onClick={[Function]}
                            >
                              <styled.div>
                                <StyledComponent
                                  forwardedClass={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": undefined,
                                      "componentStyle": ComponentStyle {
                                        "componentId": "sc-jWBwVP",
                                        "isStatic": true,
                                        "lastClassName": "cUszRA",
                                        "rules": Array [
                                          "
  padding-left: 25px;
  line-height: 16px;
",
                                        ],
                                      },
                                      "displayName": "styled.div",
                                      "render": [Function],
                                      "styledComponentId": "sc-jWBwVP",
                                      "target": "div",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                >
                                  <div
                                    className="sc-jWBwVP cUszRA"
                                  >
                                    Selection 
                                    1
                                  </div>
                                </StyledComponent>
                              </styled.div>
                              <Styled(Badge)
                                isOpen={true}
                                type="SELECTIONS"
                              >
                                <StyledComponent
                                  forwardedClass={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": undefined,
                                      "componentStyle": ComponentStyle {
                                        "componentId": "sc-iRbamj",
                                        "isStatic": false,
                                        "lastClassName": "kCYJKP",
                                        "rules": Array [
                                          "
  ",
                                          [Function],
                                          ";
",
                                        ],
                                      },
                                      "displayName": "Styled(Badge)",
                                      "render": [Function],
                                      "styledComponentId": "sc-iRbamj",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                      Symbol(Symbol.hasInstance): [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  isOpen={true}
                                  type="SELECTIONS"
                                >
                                  <Badge
                                    className="sc-iRbamj kCYJKP"
                                    isActive={true}
                                    isOpen={true}
                                    position={0}
                                    type="SELECTIONS"
                                  >
                                    <Themed(styled.div)
                                      className="sc-iRbamj kCYJKP"
                                      data-test="badge"
                                      isActive={true}
                                      isOpen={true}
                                      position={0}
                                      type="SELECTIONS"
                                    >
                                      <Themed
                                        className="sc-iRbamj kCYJKP"
                                        data-test="badge"
                                        forwardedRef={null}
                                        isActive={true}
                                        isOpen={true}
                                        position={0}
                                        type="SELECTIONS"
                                      >
                                        <styled.div
                                          className="sc-iRbamj kCYJKP"
                                          data-test="badge"
                                          isActive={true}
                                          isOpen={true}
                                          position={0}
                                          theme="dark"
                                          type="SELECTIONS"
                                        >
                                          <StyledComponent
                                            className="sc-iRbamj kCYJKP"
                                            data-test="badge"
                                            forwardedClass={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": undefined,
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-ckVGcZ",
                                                  "isStatic": false,
                                                  "lastClassName": "eVufXw",
                                                  "rules": Array [
                                                    "
  padding: 0 6px;
  min-width: 17px;

  border-radius: 8.5px;
  ",
                                                    "
  display: inline-block;
  height: 17px;
  margin-left: 7px;
  font-size: 12px;
  font-weight: 600;
  line-height: 1.5;
  ",
                                                    [Function],
                                                    ";
  ",
                                                    [Function],
                                                    ";
",
                                                    ";
",
                                                  ],
                                                },
                                                "displayName": "styled.div",
                                                "render": [Function],
                                                "styledComponentId": "sc-ckVGcZ",
                                                "target": "div",
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                              }
                                            }
                                            forwardedRef={null}
                                            isActive={true}
                                            isOpen={true}
                                            position={0}
                                            theme="dark"
                                            type="SELECTIONS"
                                          >
                                            <div
                                              className="sc-iRbamj kCYJKP sc-ckVGcZ eVufXw"
                                              data-test="badge"
                                              type="SELECTIONS"
                                            >
                                              145
                                            </div>
                                          </StyledComponent>
                                        </styled.div>
                                      </Themed>
                                    </Themed(styled.div)>
                                  </Badge>
                                </StyledComponent>
                              </Styled(Badge)>
                            </button>
                          </StyledComponent>
                        </styled.button>
                      </Themed>
                    </Themed(styled.button)>
                  </span>
                </StyledComponent>
              </styled.span>
            </Themed>
          </Themed(styled.span)>
          <styled.div
            data-test="actions"
          >
            <StyledComponent
              data-test="actions"
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": undefined,
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-brqgnP",
                    "isStatic": true,
                    "lastClassName": "QAZzj",
                    "rules": Array [
                      "
  display: flex;
  align-items: center;
  margin-left: auto;
  margin-right: 24px;
",
                    ],
                  },
                  "displayName": "styled.div",
                  "render": [Function],
                  "styledComponentId": "sc-brqgnP",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="sc-brqgnP QAZzj"
                data-test="actions"
              >
                <styled.div
                  onClick={[Function]}
                >
                  <StyledComponent
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": undefined,
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-cMljjf",
                          "isStatic": true,
                          "lastClassName": "giKUJt",
                          "rules": Array [
                            "
  display: flex;
  align-items: center;
  position: relative;
  top: 1px;
  height: 26px;
  z-index: 1;
  padding: 0 2px;
  margin-right: 10px;
  border-right: 1px solid ",
                            "rgba(255, 255, 255, 0.15)",
                            ";
",
                          ],
                        },
                        "displayName": "styled.div",
                        "render": [Function],
                        "styledComponentId": "sc-cMljjf",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    onClick={[Function]}
                  >
                    <div
                      className="sc-cMljjf giKUJt"
                      onClick={[Function]}
                    >
                      <Dropdown
                        aria-label="Batch Operations"
                        buttonStyles={
                          Array [
                            "
  color: #fff;
",
                          ]
                        }
                        label={<ForwardRef />}
                        placement="bottom"
                      >
                        <styled.div>
                          <StyledComponent
                            forwardedClass={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": undefined,
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-fjdhpX",
                                  "isStatic": true,
                                  "lastClassName": "Yobvn",
                                  "rules": Array [
                                    "
  position: relative;
  height: 20px;
",
                                  ],
                                },
                                "displayName": "styled.div",
                                "render": [Function],
                                "styledComponentId": "sc-fjdhpX",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={[Function]}
                          >
                            <div
                              className="sc-fjdhpX Yobvn"
                            >
                              <Themed(styled.button)
                                buttonStyles={
                                  Array [
                                    "
  color: #fff;
",
                                  ]
                                }
                                data-button-open={false}
                                data-test="dropdown-toggle"
                                onClick={[Function]}
                                onKeyDown={[Function]}
                              >
                                <Themed
                                  buttonStyles={
                                    Array [
                                      "
  color: #fff;
",
                                    ]
                                  }
                                  data-button-open={false}
                                  data-test="dropdown-toggle"
                                  forwardedRef={null}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                >
                                  <styled.button
                                    buttonStyles={
                                      Array [
                                        "
  color: #fff;
",
                                      ]
                                    }
                                    data-button-open={false}
                                    data-test="dropdown-toggle"
                                    onClick={[Function]}
                                    onKeyDown={[Function]}
                                    theme="dark"
                                  >
                                    <StyledComponent
                                      buttonStyles={
                                        Array [
                                          "
  color: #fff;
",
                                        ]
                                      }
                                      data-button-open={false}
                                      data-test="dropdown-toggle"
                                      forwardedClass={
                                        Object {
                                          "$$typeof": Symbol(react.forward_ref),
                                          "attrs": undefined,
                                          "componentStyle": ComponentStyle {
                                            "componentId": "sc-jzJRlG",
                                            "isStatic": false,
                                            "lastClassName": "fBbEHG",
                                            "rules": Array [
                                              "
  /* Positioning */
  position: relative;
  display: flex;
  align-items: center;

  /* Display & Box Model */
  border: none;

  /* Color */
  color: ",
                                              [Function],
                                              ";

  background: none;

  /* Text */
  font-family: IBMPlexSans;
  font-size: 15px;
  font-weight: 600;

  /* Other */
  cursor: ",
                                              [Function],
                                              ";

  & > svg {
    vertical-align: text-bottom;
  }

  ",
                                              [Function],
                                              ";
",
                                            ],
                                          },
                                          "displayName": "styled.button",
                                          "render": [Function],
                                          "styledComponentId": "sc-jzJRlG",
                                          "target": "button",
                                          "toString": [Function],
                                          "warnTooManyClasses": [Function],
                                          "withComponent": [Function],
                                        }
                                      }
                                      forwardedRef={null}
                                      onClick={[Function]}
                                      onKeyDown={[Function]}
                                      theme="dark"
                                    >
                                      <button
                                        className="sc-jzJRlG fBbEHG"
                                        data-button-open={false}
                                        data-test="dropdown-toggle"
                                        onClick={[Function]}
                                        onKeyDown={[Function]}
                                      >
                                        <Styled(ReactComponent)>
                                          <StyledComponent
                                            forwardedClass={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": undefined,
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-csuQGl",
                                                  "isStatic": true,
                                                  "lastClassName": "hPdAxl",
                                                  "rules": Array [
                                                    "
  color: '#ffffff';
",
                                                  ],
                                                },
                                                "displayName": "Styled(ReactComponent)",
                                                "render": [Function],
                                                "styledComponentId": "sc-csuQGl",
                                                "target": [Function],
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                                Symbol(Symbol.hasInstance): [Function],
                                              }
                                            }
                                            forwardedRef={null}
                                          >
                                            <ReactComponent
                                              className="sc-csuQGl hPdAxl"
                                            >
                                              <svg
                                                className="sc-csuQGl hPdAxl"
                                              >
                                                batch.svg
                                              </svg>
                                            </ReactComponent>
                                          </StyledComponent>
                                        </Styled(ReactComponent)>
                                        <ReactComponent>
                                          <svg>
                                            down.svg
                                          </svg>
                                        </ReactComponent>
                                      </button>
                                    </StyledComponent>
                                  </styled.button>
                                </Themed>
                              </Themed(styled.button)>
                              <CSSTransition
                                classNames="transition"
                                in={false}
                                mountOnEnter={true}
                                timeout={
                                  Object {
                                    "enter": 50,
                                    "exit": 20,
                                  }
                                }
                                unmountOnExit={true}
                              >
                                <Transition
                                  appear={false}
                                  enter={true}
                                  exit={true}
                                  in={false}
                                  mountOnEnter={true}
                                  onEnter={[Function]}
                                  onEntered={[Function]}
                                  onEntering={[Function]}
                                  onExit={[Function]}
                                  onExited={[Function]}
                                  onExiting={[Function]}
                                  timeout={
                                    Object {
                                      "enter": 50,
                                      "exit": 20,
                                    }
                                  }
                                  unmountOnExit={true}
                                />
                              </CSSTransition>
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Dropdown>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.button
                  aria-label="Drop Selection 1"
                  onClick={[MockFunction]}
                >
                  <StyledComponent
                    aria-label="Drop Selection 1"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": undefined,
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-jAaTju",
                          "isStatic": true,
                          "lastClassName": "bxgtuH",
                          "rules": Array [
                            "
  background: transparent;
  border-radius: 12px;
  width: 16px;
  height: 16px;
  padding: 0px;
  z-index: 3;
",
                          ],
                        },
                        "displayName": "styled.button",
                        "render": [Function],
                        "styledComponentId": "sc-jAaTju",
                        "target": "button",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    onClick={[MockFunction]}
                  >
                    <button
                      aria-label="Drop Selection 1"
                      className="sc-jAaTju bxgtuH"
                      onClick={[MockFunction]}
                    >
                      <Styled(ReactComponent)>
                        <StyledComponent
                          forwardedClass={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": undefined,
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-jDwBTQ",
                                "isStatic": true,
                                "lastClassName": "hbZRma",
                                "rules": Array [
                                  "
  opacity: 0.45;
  cursor: pointer;
",
                                ],
                              },
                              "displayName": "Styled(ReactComponent)",
                              "render": [Function],
                              "styledComponentId": "sc-jDwBTQ",
                              "target": [Function],
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                              Symbol(Symbol.hasInstance): [Function],
                            }
                          }
                          forwardedRef={null}
                        >
                          <ReactComponent
                            className="sc-jDwBTQ hbZRma"
                          >
                            <svg
                              className="sc-jDwBTQ hbZRma"
                            >
                              remove-item.svg
                            </svg>
                          </ReactComponent>
                        </StyledComponent>
                      </Styled(ReactComponent)>
                    </button>
                  </StyledComponent>
                </styled.button>
              </div>
            </StyledComponent>
          </styled.div>
        </dt>
      </StyledComponent>
    </styled.dt>
  </Themed>
</Themed(styled.dt)>
`;
